# VideoTimeTracker

./: .gitignore  .replit  README.md  app.py  deploy.py  pyproject.toml  transcription_archive.json  usage_data.json
static/css/: custom.css
static/js/: player.js  search.js  statistics.js  usage_tracker.js
templates/: archive.html  index.html  player.html  statistics.html
videos/: video0-subtitles.vtt  video0-thumbnails.vtt  video1-subtitles.vtt  video1-thumbnails.vtt
