[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "duden>=0.19.1",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "googletrans==4.0.0rc1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.5",
    "psycopg2-binary>=2.9.10",
    "soundfile>=0.13.1",
    "werkzeug>=3.1.3",
    "whisper>=1.1.10",
]
